--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         
     - name: Install dependencies
-      run: npm install
+      run: yarn
       
-    - run: npm ci
-    - run: npm run build --if-present
+    - run: yarn ci
+    - run: yarn build
