--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,8 +25,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        
+
     - name: Install dependencies
       run: yarn
-    - Build
-    - run: yarn build
+
+    - name: Build the application
+      run: yarn build
