--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --emptyOutDir",
+    "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "cargo tauri dev"
   },
