--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ description = "AcadMaster"
 [dependencies]
 winapi = "0.3.9"
 tauri = { version = "1.3", features = ["app-show", "window-close"] }
+tauri-plugin-window-state = "0.1"
 window-vibrancy = "0.3.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
