--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ description = "AcadMaster"
 
 [dependencies]
 winapi = "0.3.9"
-tauri = { version = "1.3", features = ["app-show", "window-close"] }
+tauri = { version = "1.3", features = [ "window-minimize", "window-show", "window-unminimize", "window-unmaximize", "window-maximize", "window-hide", "window-start-dragging", "window-close", "app-show"] }
 tauri-plugin-window-state = "0.1"
 window-vibrancy = "0.3.2"
 serde = { version = "1.0", features = ["derive"] }
