--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "ES6",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
 }
